<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray_bg"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16dp"
            android:text="@string/security"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        pink card-->

        <com.google.android.material.card.MaterialCardView
            app:cardElevation="@dimen/dimen_16dp"
            android:id="@+id/pink_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_180dp"
            android:layout_margin="16dp"
            app:cardBackgroundColor="#f6737b"
            app:cardCornerRadius="32dp"
            app:layout_anchorGravity="center"
            app:layout_constraintTop_toBottomOf="@id/title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_sos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:elevation="@dimen/dimen_16sp"
                    android:text="@string/sos"
                    android:textColor="#FFF"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/pink_card"
                    app:layout_constraintTop_toTopOf="@id/pink_card"
                    tools:ignore="MissingConstraints,NotSibling" />

                <TextView
                    android:id="@+id/sos_msg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:elevation="8dp"
                    android:text="@string/in_case_of_emergency_keep_telling_family_members_to_contact_me"
                    android:textColor="#fff"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/sos_img"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_sos"
                    tools:ignore="NotSibling" />

                <ImageView
                    android:id="@+id/sos_img"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_margin="16dp"
                    android:elevation="8dp"
                    android:src="@drawable/ic_sos"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="NotSibling" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <!--        Green card-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/green_card"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/green"
            app:cardCornerRadius="32dp"
            app:layout_anchorGravity="center"
            app:layout_constraintTop_toBottomOf="@id/pink_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_guard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginStart="52dp"
                    android:elevation="@dimen/dimen_16sp"
                    android:text="@string/guard"
                    android:textColor="#FFF"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/green_card"
                    app:layout_constraintTop_toTopOf="@id/green_card"
                    tools:ignore="MissingConstraints,NotSibling" />

                <TextView
                    android:id="@+id/guard_msg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:elevation="8dp"
                    android:text="@string/open_when_you_are_on_a_potentially_dangerous_journey"
                    android:textColor="#fff"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/guard_img"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_guard"
                    tools:ignore="NotSibling" />

                <ImageView
                    android:id="@+id/guard_img"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_margin="16dp"
                    android:elevation="8dp"
                    android:src="@drawable/ic_guard"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="NotSibling" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
